--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,7 +406,7 @@ button {
 /*SIDEBAR*/
 
 
-.books-content {
+.sources-content {
     position: relative;
     width: calc(100% - 240px);
     height: calc(100% - 70px);
@@ -417,13 +417,13 @@ button {
     text-align: center;
 }
 
-.books-content ul {
+.sources-content ul {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-.books-content ul li {
+.sources-content ul li {
     display: inline-block;
     padding: 0;
     margin: 10px 15px;
@@ -498,14 +498,14 @@ button {
   }
 }
 
-.books-content::-webkit-scrollbar-track,
+.sources-content::-webkit-scrollbar-track,
 .sidebar ul::-webkit-scrollbar-track,
 .translate-form textarea::-webkit-scrollbar-track {
 	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
 }
 
-.books-content::-webkit-scrollbar{
+.sources-content::-webkit-scrollbar{
     width: 10px;
 }
 
@@ -514,7 +514,7 @@ button {
 	width: 7px;
 }
 
-.books-content::-webkit-scrollbar-thumb,
+.sources-content::-webkit-scrollbar-thumb,
 .sidebar ul::-webkit-scrollbar-thumb,
 .translate-form textarea::-webkit-scrollbar-thumb {
 	border-radius: 10px;
