--- a/c4t/src/renderer/assets/css/style.css
+++ b/c4t/src/renderer/assets/css/style.css
@@ -78,7 +78,7 @@ button {
         float: left;
         width: 100%;
         height: 50px;
-        background:#333 url(../img/CfTZ-Branding-white.png) no-repeat center;
+        background:#333 url(../img/logo.png) no-repeat center;
     }
 
     .back-to-main-btn {
